--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
 <h5 class="p1"><span class="s1">1.1 스마트폰 화면을 한번 누를 때 보면 좋을 것 같은 영상을 찍는다.</span></h5>
 <video width="360" controls>
   <source src="tap.mp4" type="video/mp4"></video>
-* 예시  영상 -->
+* 예시  영상
 <video width="333.5" controls>
-  <source src="exTap.mp4" type="video/mp4"></video>>
+  <source src="exTap.mp4" type="video/mp4"></video>
+<video width="333.5" controls>
+  <source src="exTap1.mp4" type="video/mp4"></video>
 
 <hr />
 
@@ -70,24 +72,32 @@
 * 예시  영상
 <video width="333.5" controls>
   <source src="exSwr.mp4" type="video/mp4"></video>
+<video width="333.5" controls>
+  <source src="exSwr1.mp4" type="video/mp4"></video>
 <h5 class="p1"><span class="s1">2.2 스마트폰 화면을 왼쪽으로 밀 때(Swipe Left)<span class="Apple-converted-space">  </span>나오면 좋을 것 같은 영상을 찍는다.</span></h5>
 <video width="360" controls>
   <source src="sWL.mp4" type="video/mp4"></video>
 * 예시  영상
 <video width="333.5" controls>
   <source src="exSwl.mp4" type="video/mp4"></video>
+<video width="333.5" controls>
+  <source src="exSwl1.mp4" type="video/mp4"></video>
 <h5 class="p1"><span class="s1">2.3 스마트폰 화면을 위로 밀 때(Swipe up) 나오면 것 같은 영상을 찍는다.</span></h5>
 [<video width="360" controls>
   <source src="sWU.mp4" type="video/mp4"></video>
 * 예시  영상
 <video width="333.5" controls>
   <source src="exSwu.mp4" type="video/mp4"></video>
+<video width="333.5" controls>
+  <source src="exSwu1.mp4" type="video/mp4"></video>
 <h5 class="p1"><span class="s1">2.4 스마트폰 화면을 아래로 밀 때(Swipe Down) 나오면 좋을 것 같은 영상을 찍는다.</span></h5>
 <video width="360" controls>
   <source src="sWD.mp4" type="video/mp4"></video>
 * 예시  영상
 <video width="333.5" controls>
   <source src="exSwd.mp4" type="video/mp4"></video>
+<video width="333.5" controls>
+  <source src="exSwd1.mp4" type="video/mp4"></video>
 <hr />
   <h3>3. <b>손동작</b>(hand gesture)을 할 때 나오는 영상</h3>
 <h5 class="p1"><span class="s1">3.1 스마트폰을 보면서 손 흔들 때 보면 좋을 것 같은 영상을 찍는다. </span></h5>
@@ -96,6 +106,8 @@
 * 예시  영상
 <video width="333.5" controls>
   <source src="exHand.mp4" type="video/mp4"></video>
+<video width="333.5" controls>
+  <source src="exHand1.mp4" type="video/mp4"></video>
 <hr />
 
   <h3>4. <b>얼굴 표정</b>(Facial Gesture)을 지을 때 나오는 영상</h3>
@@ -105,6 +117,8 @@
 * 예시  영상
 <video width="333.5" controls>
   <source src="exFace.mp4" type="video/mp4"></video>
+<video width="333.5" controls>
+  <source src="exFace1.mp4" type="video/mp4"></video>
 
 <hr />
 
@@ -115,6 +129,8 @@
 * 예시  영상
 <video width="333.5" controls>
   <source src="exShake.mp4" type="video/mp4"></video>
+<video width="333.5" controls>
+  <source src="exShake1.mp4" type="video/mp4"></video>
 <hr />
 
   <h3>6. <b>Tilt</b>할 때 나오는 영상</h3>
@@ -124,7 +140,8 @@
 * 예시  영상
 <video width="333.5" controls>
   <source src="exTilt.mp4" type="video/mp4"></video>
-
+<video width="333.5" controls>
+  <source src="exTilt1.mp4" type="video/mp4"></video>
 <hr />
 
 <h3>7. <b>말할 때</b>(Voice interaction) 나오는 영상</h3>
@@ -134,6 +151,8 @@
 * 예시  영상
 <video width="333.5" controls>
   <source src="exVoice.mp4" type="video/mp4"></video>
+<video width="333.5" controls>
+  <source src="exVoice1.mp4" type="video/mp4"></video>
 
 <hr />
 <br>촬영을 완료하신 영상은 어떠한 것을 상상하시면서 촬영하셨는지를 적은 텍스트와 함께 이메일 <a href="mailto:jesse41@naver.com?Subject=Hello%20again" target="_top">jesse41@naver.com</a> 혹은 카카오톡( 아이디 : jesse41 )로 보내주시면 됩니다.<br>
