--- a/index.html
+++ b/index.html
@@ -55,90 +55,90 @@
 
 <h3>1. <b>Tap 영상</b></h3>
 <h5 class="p1"><span class="s1">1.1 스마트폰 화면을 한번 누를 때 보면 좋을 것 같은 영상을 찍는다.</span></h5>
-<video width="360" controls>
+<video width="360" autoplay loop controls>
   <source src="tap.mp4" type="video/mp4"></video>
 * 예시  영상
-<video width="333.5" controls>
+<video width="333.5" autoplay loop controls>
   <source src="exTap.mp4" type="video/mp4"></video>
-<video width="333.5" controls>
+<video width="333.5" autoplay loop controls>
   <source src="exTap1.mp4" type="video/mp4"></video>
 
 <hr />
 
   <h3>2. <b>Swipe를 할 때 나오는 영상</b></h3>
 <h5 class="p1"><span class="s1">2.1 스마트폰 화면을 오른쪽으로 밀 때(Swipe Right) 나오면 좋을 것 같은 영상을 찍는다.</span></h5>
-<video width="360" controls>
+<video width="360" autoplay loop controls>
   <source src="sWR.mp4" type="video/mp4"></video>
 * 예시  영상
-<video width="333.5" controls>
+<video width="333.5" autoplay loop controls>
   <source src="exSwr.mp4" type="video/mp4"></video>
-<video width="333.5" controls>
+<video width="333.5" autoplay loop controls>
   <source src="exSwr1.mp4" type="video/mp4"></video>
 <h5 class="p1"><span class="s1">2.2 스마트폰 화면을 왼쪽으로 밀 때(Swipe Left)<span class="Apple-converted-space">  </span>나오면 좋을 것 같은 영상을 찍는다.</span></h5>
-<video width="360" controls>
+<video width="360" autoplay loop controls>
   <source src="sWL.mp4" type="video/mp4"></video>
 * 예시  영상
-<video width="333.5" controls>
+<video width="333.5" autoplay loop controls>
   <source src="exSwl.mp4" type="video/mp4"></video>
-<video width="333.5" controls>
+<video width="333.5" autoplay loop controls>
   <source src="exSwl1.mp4" type="video/mp4"></video>
 <h5 class="p1"><span class="s1">2.3 스마트폰 화면을 위로 밀 때(Swipe up) 나오면 것 같은 영상을 찍는다.</span></h5>
-[<video width="360" controls>
+<video width="360" autoplay loop controls>
   <source src="sWU.mp4" type="video/mp4"></video>
 * 예시  영상
-<video width="333.5" controls>
+<video width="333.5" autoplay loop controls>
   <source src="exSwu.mp4" type="video/mp4"></video>
-<video width="333.5" controls>
+<video width="333.5" autoplay loop controls>
   <source src="exSwu1.mp4" type="video/mp4"></video>
 <h5 class="p1"><span class="s1">2.4 스마트폰 화면을 아래로 밀 때(Swipe Down) 나오면 좋을 것 같은 영상을 찍는다.</span></h5>
-<video width="360" controls>
+<video width="360" autoplay loop controls>
   <source src="sWD.mp4" type="video/mp4"></video>
 * 예시  영상
-<video width="333.5" controls>
+<video width="333.5" autoplay loop controls>
   <source src="exSwd.mp4" type="video/mp4"></video>
 <video width="333.5" controls>
   <source src="exSwd1.mp4" type="video/mp4"></video>
 <hr />
   <h3>3. <b>손동작</b>(hand gesture)을 할 때 나오는 영상</h3>
 <h5 class="p1"><span class="s1">3.1 스마트폰을 보면서 손 흔들 때 보면 좋을 것 같은 영상을 찍는다. </span></h5>
-<video width="360" controls>
+<video width="360" autoplay loop controls>
   <source src="hand.mp4" type="video/mp4"></video>
 * 예시  영상
-<video width="333.5" controls>
+<video width="333.5" autoplay loop controls>
   <source src="exHand.mp4" type="video/mp4"></video>
-<video width="333.5" controls>
+<video width="333.5" autoplay loop controls>
   <source src="exHand1.mp4" type="video/mp4"></video>
 <hr />
 
   <h3>4. <b>얼굴 표정</b>(Facial Gesture)을 지을 때 나오는 영상</h3>
 <h5 class="p1"><span class="s1">4.1 스마트폰을 보면서 웃을 때 나오면 좋을 것 같은 영상을 찍는다. </span></h5>
-<video width="360" controls>
+<video width="360" autoplay loop controls>
   <source src="face.mp4" type="video/mp4"></video>
 * 예시  영상
-<video width="333.5" controls>
+<video width="333.5" autoplay loop controls>
   <source src="exFace.mp4" type="video/mp4"></video>
-<video width="333.5" controls>
+<video width="333.5" autoplay loop controls>
   <source src="exFace1.mp4" type="video/mp4"></video>
 
 <hr />
 
   <h3>5. <b>Shake</b>할 때 나오는 영상</h3>
 <h5 class="p1"><span class="s1">5.1 스마트폰을 위 아래로 흔들 때, 보면 좋을 것 같은 영상을 찍는다. </span></h5>
-<video width="360" controls>
+<video width="360" autoplay loop controls>
   <source src="shake.mp4" type="video/mp4"></video>
 * 예시  영상
-<video width="333.5" controls>
+<video width="333.5" autoplay loop controls>
   <source src="exShake.mp4" type="video/mp4"></video>
-<video width="333.5" controls>
+<video width="333.5" autoplay loop controls>
   <source src="exShake1.mp4" type="video/mp4"></video>
 <hr />
 
   <h3>6. <b>Tilt</b>할 때 나오는 영상</h3>
 <h5 class="p1"><span class="s1">6.1 스마트폰을 좌우로 기울일 때, 보면 좋을 것 같은 영상을 찍는다. </span></h5>
-<video width="360" controls>
+<video width="360" autoplay loop controls>
   <source src="tilt.mp4" type="video/mp4"></video>
 * 예시  영상
-<video width="333.5" controls>
+<video width="333.5" autoplay loop controls>
   <source src="exTilt.mp4" type="video/mp4"></video>
 <video width="333.5" controls>
   <source src="exTilt1.mp4" type="video/mp4"></video>
@@ -146,12 +146,12 @@
 
 <h3>7. <b>말할 때</b>(Voice interaction) 나오는 영상</h3>
 <h5 class="p1"><span class="s1">7.1 스마트폰을 보면서 “안녕?”을 했을 때, 보면 좋을 것 같은 영상을 찍는다.</span></h5>
-<video width="360" controls>
+<video width="360" autoplay loop controls>
   <source src="voice.mp4" type="video/mp4"></video>
 * 예시  영상
-<video width="333.5" controls>
+<video width="333.5" autoplay loop controls>
   <source src="exVoice.mp4" type="video/mp4"></video>
-<video width="333.5" controls>
+<video width="333.5" autoplay loop controls>
   <source src="exVoice1.mp4" type="video/mp4"></video>
 
 <hr />
